# bot_manager

./: .pre-commit-config.yaml  README.md  cookies.json  pyproject.toml
.github/workflows/: pythonapp.yml
bots/: __init__.py  __main__.py  api.py  app.py  config.py  log.py
bots/applications/: __init__.py  _base.py  echo.py  manager.py
bots/public/: index.html
bots/static/: appManager.js  log.js  main.js
bots/utils/: __init__.py  fastapi.py  misc.py  pydantic.py
